@@ -1741,3 +1741,7 @@
         * genlist , gengrid: Add ELM_OBJECT_MULTIPLE_SELECT_MODE_WITH_CONTROL.
         It disallow multiple selection when clicked without control pressed although
         multiple selection is enabled.
+
+2013-10-03  Abhinandan Aryadipta (aryarockstar)
+
+        * Popup - Added elm_popup_move() api.
